fixing div alignment for home page

--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,11 @@ list-style: none;
 Community Feed 
 
 */ 
+.feed-container {
+  display: flex;
+  gap: 15px; 
+}
+
 
 .feed { 
   background-color: var(--green);
@@ -208,7 +213,7 @@ Community Feed
   padding: 20px;
   max-width: 600px;
   border-radius: 10px;
-  margin-right: auto;
+  flex: 1;
 
 }
 
@@ -217,10 +222,9 @@ Community Feed
   border: 4px solid var(--black);
   color: var(--grey);
   padding: 20px;
-  margin: 20px auto;
   max-width: 600px;
   border-radius: 10px;
-  margin-left: auto;
+  flex: 1;
 
 }
 
@@ -232,6 +236,20 @@ Community Feed
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 5px;
+}
+
+.create {
+  background-color: var(--green);
+  border: 2px solid var(--black);
+  color: var(--grey);
+  font-size: 15px ;
+  padding: 15px;
+  width: 800px;
+  height: 150px;
+  text-align:  center;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 /*
@@ -271,6 +289,17 @@ Profile Page
   color: var(--black);
   font-size: 25px;
   font-weight: bold;
+}
+
+.climbs {
+  background-color: var(--green);
+  border: 4px solid var(--black);
+  color: var(--black);
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+  border-radius: 10px;
+
 }
 
 /* 
